--- a/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarUnidadeFederada.xaml
+++ b/CalculoPrecoVenda/CalculoPrecoVenda/View/frmLocalizarUnidadeFederada.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CalculoPrecoVenda.View"
+        xmlns:model="clr-namespace:CalculoPrecoVenda.Model"
         xmlns:nf="clr-namespace:CalculoPrecoVenda"
         mc:Ignorable="d"
         Title="Localizar UF" Height="350" Width="800"
@@ -12,6 +13,16 @@
         <nf:NumberFormatter x:Key="myNumberFormatter"/>
         <Style x:Key="CellRightAlign">
             <Setter Property="Control.HorizontalAlignment" Value="Right"/>
+        </Style>
+        <Style x:Key="columnsHeaderStyle" TargetType="DataGridColumnHeader">
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        </Style>
+        <Style x:Key="cellStyle" TargetType="DataGridCell">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
         </Style>
     </Window.Resources>
 
@@ -38,36 +49,24 @@
                   AlternationCount="2"
                   RowBackground="Aqua"
                   AlternatingRowBackground="White"
-                  Name="dtgUf">
+                  Name="dtgUf"
+                  ColumnHeaderStyle="{StaticResource columnsHeaderStyle}"
+                  CellStyle="{StaticResource cellStyle}">
 
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding UfId}" Width="50" Header="Cod" />
                 <DataGridTextColumn Binding="{Binding SiglaUf}" Width="50" Header="UF" />
-                <DataGridTextColumn Binding="{Binding NomeUf}" Width="400" Header="Nome UF " />
+                <DataGridTextColumn Binding="{Binding NomeUf}" Width="250" Header="Nome UF " />
                 <DataGridTextColumn Binding="{Binding AliquotaInterna, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
                                     Width="90" Header="Al. Interna" CellStyle="{StaticResource CellRightAlign}"/>
                 <DataGridTextColumn Binding="{Binding AliquotaInterestadual, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
-                                    Width="90" Header="Al. Interestadual" CellStyle="{StaticResource CellRightAlign}"/>
+                                    Width="120" Header="Al. Interestadual" CellStyle="{StaticResource CellRightAlign}"/>
                 <DataGridTextColumn Binding="{Binding AliquotaFcp, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
                                     Width="90" Header="Al. FCP" CellStyle="{StaticResource CellRightAlign}"/>
-                <DataGridTextColumn Binding="{Binding ItensFcp}" Width="120" Header="Itens FCP" />
+                <DataGridTextColumn Binding="{Binding AliquotaEmbarcacoes, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
+                                    Width="120" Header="Al. Embarcaçoes" CellStyle="{StaticResource CellRightAlign}"/>
                                     
             </DataGrid.Columns>
-            <DataGrid.ColumnHeaderStyle>
-                <Style TargetType="{x:Type DataGridColumnHeader}">
-                    <Setter Property="FontWeight" Value="Bold"/>
-                    <Setter Property="FontSize" Value="14"/>
-                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                </Style>
-            </DataGrid.ColumnHeaderStyle>
-            <DataGrid.CellStyle>
-                <Style x:Name="Cell" TargetType="{x:Type DataGridCell}">
-                    <Setter Property="FontSize" Value="14"/>
-                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                </Style>
-            </DataGrid.CellStyle>
-
         </DataGrid>
         <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Width="120" Height="35" VerticalAlignment="Top" Margin="20,20,10,0" Click="btnOK_Click"
                 Name="btnSelecionar" Content="Selecionar"/>
