--- a/CalculoPrecoVenda/View/frmSobre.xaml
+++ b/CalculoPrecoVenda/View/frmSobre.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CalculoPrecoVenda.View"
         mc:Ignorable="d"
-        Title="Cálculo de Preço de Venda" Height="230" Width="300"
+        Title="Cálculo de Preço de Venda" Height="250" Width="330"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
     <Grid Margin="10">
@@ -16,18 +16,18 @@
         <DockPanel Grid.Row="0" LastChildFill="True">
             <StackPanel DockPanel.Dock="Top" Orientation="Vertical">
                 <Label VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Image Source="./Imagens/Logo.png" Stretch="None"/>
+                    <Image Source="/Images/Logo.png" Stretch="None"/>
                 </Label>
-                <Separator Height="5"/>
+                <Separator Height="5" Margin="0,5,0,0"/>
             </StackPanel>
             <TextBlock DockPanel.Dock="Bottom" Text="Desenvolvido por Renato Vilar" TextWrapping="Wrap"
-                       HorizontalAlignment="Center"/>
+                       HorizontalAlignment="Center" Margin="0,5,0,0"/>
             <TextBlock DockPanel.Dock="Bottom" Text="Versão 1.0.0.0" TextWrapping="Wrap"
-                       HorizontalAlignment="Center"/>
-            <Label Content="Cálculo de Preço de Venda" HorizontalAlignment="Center" FontSize="24" FontWeight="Bold"/>
+                       HorizontalAlignment="Center" Margin="0,5,0,0"/>
+            <Label Content="Cálculo de Preço de Venda" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"/>
         </DockPanel>
 
-        <Button Grid.Row="1" Name="btnOK" Content="OK" Height="25" Width="60" HorizontalAlignment="Right" Margin="0,15,0,0"/>
+        <Button Grid.Row="1" Name="btnOK" Content="OK" Height="25" Width="60" HorizontalAlignment="Right" Margin="0,15,0,0" Click="btnOK_Click"/>
 
     </Grid>
 </Window>
