--- a/CalculoPrecoVenda/View/MainWindow.xaml
+++ b/CalculoPrecoVenda/View/MainWindow.xaml
@@ -4,11 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CalculoPrecoVenda"
-        
         mc:Ignorable="d"
-        Title="Cálculo do Preço de Venda" Width="1380" Height="840" 
+        Title="Cálculo do Preço de Venda" 
+        Width="1380" 
+        Height="840" 
+        ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen"
-        ResizeMode="CanMinimize" Loaded="Window_Loaded">
+        Loaded="Window_Loaded" d:DesignWidth="1380" d:DesignHeight="840">
     <Window.Resources>
         <local:NumberFormatter x:Key="myNumberFormatter"/>
         <local:MultiplyConverter x:Key="myMultiplyConverter"/>
@@ -21,6 +23,7 @@
         <local:CalcPrecoReposicaoConverter x:Key="myCalcPrecoReposicaoConverter"/>
         <local:AliquotaIcmsConverter x:Key="myAliquotaIcmsConverter"/>
         <local:DifalConverter x:Key="myDifalConverter"/>
+        <local:TotalImpostosConverter x:Key="myTotalImpostosConverter"/>
 
         <Storyboard x:Key="flashAnimation" >
             <DoubleAnimation Storyboard.TargetProperty="Opacity" From="1" To="0" AutoReverse="True" Duration="0:0:1.0" RepeatBehavior="Forever" />
@@ -141,21 +144,22 @@
                         <ColumnDefinition Width="145*"/>
                     </Grid.ColumnDefinitions>
 
-                    <StackPanel Grid.Row="2" Grid.Column="3" Orientation="Horizontal">
+                    <StackPanel Grid.Row="2" Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
                         <Label Grid.Row="2" Grid.Column="2" Content="UF:" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,10,0"/>
                         <ComboBox Grid.Row="2" Grid.Column="3" Name="cbolistaUf" VerticalAlignment="Center" Width="80" 
                               ItemsSource="{Binding}" DisplayMemberPath="SiglaUf" SelectedValuePath="SiglaUf" SelectedValue="SiglaUf" DropDownClosed="cbolistaUf_DropDownClosed" />
                     </StackPanel>
 
                     <CheckBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Name="chkClienteZfm" Content="Venda na ZFM" IsEnabled="False" VerticalAlignment="Center" Margin="10,0,0,0"/>
-                    <RadioButton Grid.Row="0" Grid.Column="2"  Name="radPessoaJurídica" GroupName="Pessoa" Content="Pessoa Jurídica" VerticalAlignment="Center" Margin="10,0,0,0" Checked="radPessoaJurídica_Checked" />
-                    <RadioButton Grid.Row="0" Grid.Column="3" Name="radPessoaFisica" GroupName="Pessoa" Content="Pessoa Física" VerticalAlignment="Center" Margin="10,0,0,0" Checked="radPessoaFisica_Checked"/>
+                    <RadioButton Grid.Row="0" Grid.Column="2" Grid.ColumnSpan="2" Name="radPessoaJurídica" GroupName="Pessoa" Content="Contribuinte ICMS" VerticalAlignment="Center" Margin="10,0,0,0" Checked="radPessoaJurídica_Checked" />
+                    <RadioButton Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="2" Name="radPessoaFisica" GroupName="Pessoa" Content="Não Contribuinte ICMS" VerticalAlignment="Center" Margin="10,0,0,0" Checked="radPessoaFisica_Checked"/>
                     <RadioButton Grid.Row="0" Grid.Column="0" Name="radClienteEstrangeiro" GroupName="Cliente" Content="Estrangeiro" VerticalAlignment="Center" Margin="10,0,0,0" Checked="radClienteEstrangeiro_Checked"/>
                     <RadioButton Grid.Row="1" Grid.Column="0" Name="radClienteNacional" GroupName="Cliente" Content="Nacional" VerticalAlignment="Center" Margin="10,0,0,0" Checked="radClienteNacional_Checked" />
                     <RadioButton Grid.Row="2" Grid.Column="0" Name="radClienteLocal" GroupName="Cliente" Content="Local" VerticalAlignment="Center" Margin="10,0,0,0" Checked="radClienteLocal_Checked" />
-                    <CheckBox Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Name="chkContribuinte" Content="PJ Não Contribuinte / Órgão Público" IsEnabled="False" VerticalAlignment="Center" Margin="10,0,0,0" />
+                    <!--<CheckBox Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="3" Name="chkContribuinte" Content="PJ Não Contribuinte / Órgão Público" IsEnabled="False" VerticalAlignment="Center" Margin="10,0,0,0" />-->
                     <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3"  Content="Items com FCP na UF selecioanda:" VerticalAlignment="Center" Margin="10,0,0,0"/>
-                    <TextBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" Name="txtItemsFcp" BorderThickness="2" Margin="10,5,0,0" TextAlignment="Left"
+                    <TextBox Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" Name="txtItemsFcp" BorderThickness="2" Margin="10,5,0,0" 
+                             TextAlignment="Left" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Auto"
                              Text="{Binding SelectedItem.ItensFcp, ElementName=cbolistaUf}"/>
                 </Grid>
             </GroupBox>
@@ -645,10 +649,10 @@
                                             Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}"/>
                                     </DataTrigger>
 
-                                    <DataTrigger Binding="{Binding IsChecked, ElementName=chkEmbarcacoes}" Value="True">
+                                    <!--<DataTrigger Binding="{Binding IsChecked, ElementName=chkEmbarcacoes}" Value="True">
                                         <Setter Property="Text" Value="{Binding Source={StaticResource Settings}, Path=AliquotaIcmsEmbarcacoes, 
                                             Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}"/>
-                                    </DataTrigger>
+                                    </DataTrigger>-->
 
                                     <MultiDataTrigger>
                                         <MultiDataTrigger.Conditions>
@@ -889,14 +893,25 @@
 
                     <!--Impostos Federais-->
                     <TextBox Grid.Row="6" Grid.Column="1" Name="txtPercentImpostosFed" VerticalAlignment="Center" Margin="5,0" IsEnabled="False">
-                        <TextBox.Text>
-                            <MultiBinding Converter="{StaticResource mySumConverter}" ConverterParameter='n2'>
-                                <Binding Source="{StaticResource Settings}" Path="Default.Irpj"/>
-                                <Binding Source="{StaticResource Settings}" Path="Default.Csll"/>
-                                <Binding Source="{StaticResource Settings}" Path="Default.Pis"/>
-                                <Binding Source="{StaticResource Settings}" Path="Default.Cofins"/>
-                            </MultiBinding>
-                        </TextBox.Text>
+                        <TextBox.Style>
+                            <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
+                                <Setter Property="Text">
+                                    <Setter.Value>
+                                        <MultiBinding Converter="{StaticResource mySumConverter}" ConverterParameter='n2'>
+                                            <Binding Source="{StaticResource Settings}" Path="Default.Irpj"/>
+                                            <Binding Source="{StaticResource Settings}" Path="Default.Csll"/>
+                                            <Binding Source="{StaticResource Settings}" Path="Default.Pis"/>
+                                            <Binding Source="{StaticResource Settings}" Path="Default.Cofins"/>
+                                        </MultiBinding>
+                                    </Setter.Value>
+                                </Setter>
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding IsChecked, ElementName=radClienteEstrangeiro}" Value="True">
+                                        <Setter Property="Text" Value="0.00"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBox.Style>
                     </TextBox>
 
 
@@ -997,12 +1012,18 @@
 
                     <TextBox Grid.Row="9" Grid.Column="1" Name="txtPercentImpostos" VerticalAlignment="Center" Margin="5,0">
                         <TextBox.Text>
-                            <MultiBinding Converter="{StaticResource mySumConverter}" ConverterParameter='n2'>
+                            <MultiBinding Converter="{StaticResource myTotalImpostosConverter}" ConverterParameter='n2'>
                                 <Binding Path="Text" ElementName="txtPercentIcmsVendas"/>
                                 <Binding Path="Text" ElementName="txtPercentDifal"/>
                                 <Binding Path="Text" ElementName="txtPercentFcp"/>
                                 <Binding Path="Text" ElementName="txtPercentImpostosFed"/>
                                 <Binding Path="Text" ElementName="txtPercentDesOperacinais"/>
+                                <Binding Path="IsChecked" ElementName="chkPpb"/>
+                                <Binding Path="IsChecked" ElementName="radClienteLocal"/>
+                                <Binding Path="IsChecked" ElementName="radClienteNacional"/>
+                                <Binding Path="IsChecked" ElementName="radPessoaFisica"/>
+                                <Binding Path="IsChecked" ElementName="chkImportadoZfm"/>
+                                <Binding Path="IsChecked" ElementName="chkClienteZfm"/>
                             </MultiBinding>
                         </TextBox.Text>
                     </TextBox>
@@ -1107,7 +1128,7 @@
                         <TextBox.Text>
                             <MultiBinding Converter="{StaticResource mySumConverter}" ConverterParameter='n2'>
                                 <Binding Path="Text" ElementName="txtIcmsVendas3"/>
-                                <Binding Path="Text" ElementName="txtDifal"/>
+                                <Binding Path="Text" ElementName="txtDifal3"/>
                                 <Binding Path="Text" ElementName="txtFcp3"/>
                                 <Binding Path="Text" ElementName="txtImpostosFed3"/>
                                 <Binding Path="Text" ElementName="txtDesOperacinais3"/>
