--- a/CalculoPrecoVenda/App.xaml
+++ b/CalculoPrecoVenda/App.xaml
@@ -2,15 +2,28 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CalculoPrecoVenda"
+             xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
+            
              StartupUri="View\MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
-            <local:Settings x:Key="Settings"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Themes/ShinyBlue.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <local:Settings x:Key="Settings"/>
+            <Style TargetType="{x:Type toolkit:MessageBox}">
+                <Setter Property="Background" Value="#FFFFFFFF" />
+                <Setter Property="BorderBrush" Value="#FFBBBBBB" />
+                <Setter Property="WindowBorderBrush" Value="#FFBBBBBB" />
+                <Setter Property="CaptionForeground" Value="#FF000000" />
+                <Setter Property="WindowBackground" Value="#FF006DD4" />
+                <Setter Property="Foreground" Value="#FF000000"/>
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontWeight" Value="DemiBold"/>
+                <Setter Property="ButtonRegionBackground" Value="#FF006DD4"/>
+            </Style>
+
+
         </ResourceDictionary>
-       
     </Application.Resources>
-    
-</Application>
+ </Application>
