--- a/CalculoPrecoVenda/View/MainWindow.xaml
+++ b/CalculoPrecoVenda/View/MainWindow.xaml
@@ -8,7 +8,6 @@
         Title="Cálculo do Preço de Venda" 
         Width="1380" 
         Height="840" 
-        
         WindowStartupLocation="CenterScreen"
         Loaded="Window_Loaded" d:DesignWidth="1380" d:DesignHeight="840">
     <Window.Resources>
@@ -120,22 +119,7 @@
                     <CheckBox Grid.Row="6" Grid.Column="1" Name="chkSubstTribut" Content="Substituição Tributária" Margin="10,5,0,0" Checked="chkSubstTribut_Checked"
                               IsChecked="{Binding chkSubstTribut_Checked}"/>
 
-                    <TextBox Grid.Row="0" Grid.Column="1" Name="txtNcm" BorderThickness="2" Margin="0,0,10,0">
-                        <TextBox.Style>
-                            <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
-                                <Setter Property="Text" Value="{Binding CodNcm}"/>
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding IsChecked, ElementName=chkMotoresAte90Hp}" Value="True">
-                                        <Setter Property="Text" Value="90148010"/>
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </TextBox.Style>
-                    </TextBox>
-                    
-                    
-                    
-                    
+                    <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding CodNcm, Mode=TwoWay}" Name="txtNcm" BorderThickness="2" Margin="0,0,10,0" LostFocus="txtNcm_LostFocus"/>
                     <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Text="{Binding NomeNcm}" Foreground="Black" FontSize="12" Name="txbNomeNcm" VerticalAlignment="Center"/>
                     <Button Grid.Row="0" Grid.Column="2" Name="btnPesquisarNcm" Height="30" Width="50" VerticalAlignment="Center" HorizontalAlignment="Left" 
                             Content="NCM" Click="btnPesquisarNcm_Click">
@@ -417,9 +401,24 @@
                         </TextBox.Text>
                     </TextBox>
 
-                    <TextBox Grid.Row="3" Grid.Column="3" Name="txtFrete"  VerticalAlignment="Center" Margin="5,0"
-                             Text="{Binding Frete, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" 
-                             PreviewTextInput="NumberValidationTextBox"/>
+                    <TextBox Grid.Row="3" Grid.Column="3" Name="txtFrete"  VerticalAlignment="Center" Margin="5,0">
+                        <TextBox.Style>
+                            <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
+                                <Setter Property="Text" Value="0,00"/>
+                                <Style.Triggers>
+                                    <MultiDataTrigger>
+                                        <MultiDataTrigger.Conditions>
+                                            <Condition Binding="{Binding IsChecked, ElementName=radForLocal}" Value="True"/>
+                                            <Condition Binding="{Binding IsChecked, ElementName=chkMotoresAcima90Hp}" Value="True"/>
+                                        </MultiDataTrigger.Conditions>
+                                        <Setter Property="Text" Value="{Binding Source={StaticResource Settings}, Path=Default.FreteMotAcima90HP, FallbackValue='0,00', TargetNullValue='0,00', Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}"/>
+                                    </MultiDataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </TextBox.Style>
+                    </TextBox>
+                      
+                             
 
                     <TextBox Grid.Row="4" Grid.Column="3" Name="txtOutrasDespesas"  VerticalAlignment="Center" Margin="5,0"
                              Text="{Binding OutrasDespesas, Converter={StaticResource myNumberFormatter}, ConverterParameter='n2'}" PreviewTextInput="NumberValidationTextBox"/>
@@ -1178,12 +1177,13 @@
                     <!--Formulários a serem implnatados - Botões ocultos-->
                     <!--<Button Name="btnIcms" Content="ICMS sobre a Venda" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnIcms_Click_1"/>
                     <Button Name="btnDespOp" Content="Desp Operacionias" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnDespOp_Click_2"/>-->
-                    
-                    <Button Name="btnCadastroUf" Content="Cadastro UF" Width="120" Height="35" VerticalAlignment="Top" Margin="0,0,10,0" Click="btnCadastroUf_Click"/>
+
+                    <Button Name="btnSobre" Content="Sobre" Width="120" Height="35" VerticalAlignment="Top" Margin="0,0,10,0" Click="btnSobre_Click"/>
+                    <Button Name="btnCadastroUf" Content="Cadastro UF" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnCadastroUf_Click"/>
                     <Button Name="btnCadastroNcm" Content="Cadastro NCM" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnCadastroNcm_Click"/>
                     <Button Name="btnConfiguracoes" Content="Configurações" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnConfiguracoes_Click"/>
-                    <Button Name="btnImpostosFederais" Content="Impostos Federais" Width="120" Height="35" VerticalAlignment="Top" Margin="200,0,10,0" Click="btnImpostosFederais_Click"/>
-                    <Button Name="btnSobre" Content="Sobre" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnSobre_Click"/>
+                    <Button Name="btnImpostosFederais" Content="Impostos Federais" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnImpostosFederais_Click"/>
+                    <Button Name="btnImprimir" Content="Imprimir" Width="120" Height="35" VerticalAlignment="Top" Margin="20,0,10,0" Click="btnImprimir_Click"/>
                     
                 </StackPanel>
                 <StackPanel Orientation="Vertical"  VerticalAlignment="Top" Margin="0,10">
